feat: add solid endpoint
